--- a/austation/changes.txt
+++ b/austation/changes.txt
@@ -18,3 +18,4 @@ Effectism:Fusion max temperature config
 Effectism:Optimized lighting algorithms from citadel
 Effectism:Elances may explode when thrown again
 Terra:Modularized some changes from upstream PR #47536 (Penthrite)
+Effectism:Eating without a table is a war crime
