forgot a change.txt

--- a/austation/changes.txt
+++ b/austation/changes.txt
@@ -24,3 +24,4 @@ Terra:Keep borg stuns
 Terra:Repo rebase December 2019
 Terra:Ports catbans from hippie
 Terra:Thanos car with sprites by me (Terra)
+Terra:Map Exports
