--- a/austation/changes.txt
+++ b/austation/changes.txt
@@ -25,3 +25,4 @@ Terra:Repo rebase December 2019
 Terra:Ports catbans from hippie
 Terra:Thanos car with sprites by me (Terra)
 Terra:Map Exports
+Mr. Lostman:Mirror Hair Colour Changing
